# hv-dev

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md
altar/: Cargo.toml
altar/src/: api.rs  chunked_map.rs  collision.rs  command_buffer.rs  components.rs  event_loop.rs  external_event.rs  glfw.rs  graphics.rs  lattice.rs  lib.rs  physics.rs  render.rs  scene.rs  script.rs  types.rs  window.rs
altar/src/graphics/: basic.rs  basic_es300.glslf  semantics.rs
altar/src/lattice/: atom_map.rs  chunk_map.rs  chunked_map.rs  collider_map.rs  event.rs  tracked_map.rs
altar/src/render/: brisk.rs  color.rs  evol.rs  gui.rs  mesh.rs  terracotta.rs  wireframe.rs
altar/src/render/brisk/: brisk_es300.glslf  brisk_es300.glslv
altar/src/render/evol/: evol_es300.glslf  evol_es300.glslv  evol_es300_wireframe.glslf
altar/src/render/gui/: gui_es300.glslf  gui_es300.glslv
altar/src/render/pipeline/: basic.rs  basic_es300.glslv  semantics.rs
altar/src/render/terracotta/: terracotta_es300.glslf  terracotta_es300.glslv
altar/src/render/wireframe/: dynamic_wireframe_es300.glslf  dynamic_wireframe_es300.glslv  line_wireframe_es300.glslf  line_wireframe_es300.glslv  mesh.rs  static_wireframe_es300.glslf  static_wireframe_es300.glslv  wireframe_es300.glslf
hecs/: Cargo.toml
hecs/examples/: format.rs
hecs/src/: archetype.rs  lib.rs  world.rs
hecs/tests/: tests.rs
hv/: Cargo.toml
hv-alchemy/: Cargo.toml
hv-alchemy/src/: lib.rs
hv-boxed/src/: lib.rs
hv-filesystem/: Cargo.toml
hv-filesystem/src/: lib.rs
hv-lua/: Cargo.toml
hv-lua-derive/: Cargo.toml
hv-lua-derive/src/: lib.rs
hv-lua/examples/: guided_tour.rs  repl.rs  userdata.rs
hv-lua/examples/module/: Cargo.toml
hv-lua/src/: hv.rs  lua.rs  table.rs  types.rs
hv-lua/tests/: byte_string.rs  conversion.rs  function.rs  hooks.rs  macros.rs  scope.rs  string.rs  table.rs  types.rs  value.rs
hv-math/src/: lib.rs  velocity.rs
hv-sync/: Cargo.toml
hv-sync/src/: capability.rs  elastic.rs
hv-vfs/src/: lib.rs  (+1 more)
hv/crates/hv-alchemy/: Cargo.toml  README.md
hv/crates/hv-alchemy/src/: lib.rs
hv/crates/hv-atom/: Cargo.toml  README.md
hv/crates/hv-atom/src/: lib.rs
hv/crates/hv-boxed/: Cargo.toml
hv/crates/hv-boxed/src/: lib.rs
hv/crates/hv-cell/: Cargo.toml  README.md
hv/crates/hv-cell/src/: lib.rs
hv/crates/hv-console/: Cargo.toml
hv/crates/hv-console/src/: builder.rs  lib.rs  output.rs  state.rs  syntax_highlight.rs  text_buffer.rs  widget.rs
hv/crates/hv-console/src/widget/: builder.rs  cursor_range.rs  output.rs  state.rs  syntax_highlight.rs
hv/crates/hv-ecs/: Cargo.toml  README.md
hv/crates/hv-ecs-derive/: Cargo.toml  README.md
hv/crates/hv-ecs-derive/src/: bundle.rs
hv/crates/hv-ecs/src/: archetype.rs  lib.rs
hv/crates/hv-elastic/: Cargo.toml  README.md
hv/crates/hv-elastic/src/: external.rs  lib.rs
hv/crates/hv-event-channel/: Cargo.toml
hv/crates/hv-event-channel/src/: lib.rs
hv/crates/hv-filesystem/: Cargo.toml
hv/crates/hv-filesystem/resources/: foo.txt
hv/crates/hv-filesystem/src/: lib.rs
hv/crates/hv-guarded-borrow/: Cargo.toml  README.md
hv/crates/hv-guarded-borrow/src/: hecs.rs  hv_ecs.rs  lib.rs  std.rs
hv/crates/hv-gui/: Cargo.toml  README.md
hv/crates/hv-gui/src/: console.rs  lib.rs
hv/crates/hv-gui/src/console/: builder.rs  cursor_range.rs  output.rs  syntax_highlight.rs
hv/crates/hv-input/: Cargo.toml
hv/crates/hv-input/src/: glfw.rs  lib.rs
hv/crates/hv-lease-tracker/: Cargo.toml  README.md
hv/crates/hv-lease-tracker/src/: lib.rs
hv/crates/hv-looprider/: Cargo.toml
hv/crates/hv-looprider/src/: lib.rs
hv/crates/hv-lua/: .gitignore  Cargo.toml
hv/crates/hv-lua/benches/: benchmark.rs
hv/crates/hv-lua/examples/: async_http_client.rs  async_http_reqwest.rs  guided_tour.rs  serialize.rs
hv/crates/hv-lua/examples/module/: Cargo.toml
hv/crates/hv-lua/examples/module/src/: lib.rs
hv/crates/hv-lua/src/: conversion.rs  error.rs  external.rs  function.rs  hv.rs  lib.rs  lua.rs  multi.rs  prelude.rs  scope.rs  string.rs  table.rs  thread.rs  userdata.rs  util.rs  value.rs
hv/crates/hv-lua/src/conversion/: from_table.rs
hv/crates/hv-lua/src/hv/: alchemy.rs  ecs.rs  math.rs  sync.rs
hv/crates/hv-lua/src/serde/: de.rs
hv/crates/hv-lua/src/userdata/: collections.rs
hv/crates/hv-lua/tests/: conversion.rs  macros.rs  memory.rs  serde.rs  table.rs  tests.rs  thread.rs  userdata.rs
hv/crates/hv-lua/tests/module/: Cargo.toml
hv/crates/hv-lua/tests/module/tests/: load.rs
hv/crates/hv-math/: Cargo.toml
hv/crates/hv-math/src/: lib.rs
hv/crates/hv-resources/: CHANGELOG.md  Cargo.toml  LICENSE.md
hv/crates/hv-resources/src/: error.rs  lib.rs  map.rs  refs.rs
hv/crates/hv-resources/tests/: tests.rs
hv/crates/hv-script/: Cargo.toml
hv/crates/hv-script/resources/: agent.lua  binser.lua  class.lua  submodule.lua
hv/crates/hv-script/src/: api.rs  lib.rs
hv/crates/hv-stampede/: Cargo.toml  README.md
hv/crates/hv-stampede/src/: lib.rs
hv/crates/hv-sync/: Cargo.toml
hv/crates/hv-sync/src/: atom.rs  borrow.rs  cell.rs  elastic.rs  lease.rs  lib.rs  monotonic_list.rs
hv/crates/hv-sync/src/hv/: ecs.rs
hv/crates/hv-timer/: Cargo.toml
hv/crates/hv-timer/src/: lib.rs
hv/crates/hv-vfs/: Cargo.toml
hv/crates/hv-vfs/src/: lib.rs
hv/crates/hv-yaks/: Cargo.toml  README.md
hv/crates/hv-yaks/examples/: convoluted.rs  crate_doc_example.rs
hv/crates/hv-yaks/src/: access_set.rs  batch.rs  lib.rs  query_bundle.rs  query_marker.rs  run.rs  system_context.rs
hv/crates/hv-yaks/src/executor/: builder.rs  mod.rs  sequential.rs
hv/crates/hv-yaks/src/executor/parallel/: dispatching.rs  mod.rs  scheduling.rs
hv/crates/hv-yaks/src/resource/: cell.rs  mod.rs  ref_extractor.rs  tuple.rs  wrap.rs
hv/crates/hv-yaks/tests/: builder.rs  executor.rs
hv/src/: ecs.rs  lib.rs  plugin.rs
projects/scratch/: Cargo.toml
projects/scratch/src/: main.rs
resources/: Cargo.toml  LICENSE-MIT  README.md
tiled/: Cargo.toml
tiled/src/: json_parser.rs  lib.rs  lua_parser.rs  object_layer.rs  tile_layer.rs
yaks/: Cargo.toml
(+20 files in other folders)
