[workspace]
exclude = [
    "hv-ecs",
]

members = [
    "altar",
    "hv-lua",
    "hv",
    "hv/crates/*",
    "tiled",
]

[profile.dev]
# Rust iterators are absolutely horrific without any optimizations, and we like them a lot.
opt-level = 1

[patch.crates-io]
luminance-glyph = { git = "https://github.com/maximveligan/luminance-glyph" }
glfw-sys = { git = "https://github.com/maximveligan/glfw-sys-wayland.git" }
glfw = { git = "https://github.com/maximveligan/glfw-rs-wayland.git" }
