[package]
name = "altar"
version = "0.1.0"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>", "Maxim Veligan <maximveligan@gmail.com>"]
edition = "2021"

[features]
glfw-windowing = ["glfw", "luminance-glfw", "hv/glfw", "luminance-windowing", "windowed"]
windowed = []
default = ["glfw-windowing"]

[dependencies]
crossbeam-queue = "0.3.2"
glfw = { version = "0.41", optional = true }
hv = { path = "../hv", features = ["parry3d"] }
luminance = "0.44.1"
luminance-glfw = { version = "0.16.0", optional = true }
luminance-windowing = { version = "0.10.0", optional = true }
parry3d = "0.7.1"
resources = { path = "../resources" }
serde = "1.0.130"
spin = "0.9.2"
static_assertions = "1.1.0"
thunderdome = "0.5.0"
tracing = "0.1.29"
