[package]
name = "altar"
version = "0.1.0"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>", "Maxim Veligan <maximveligan@gmail.com>"]
edition = "2021"

[features]
glfw-windowing = ["glfw", "luminance-glfw", "hv/glfw", "windowed"]
windowed = []
default = ["glfw-windowing"]

[dependencies]
bitvec = "0.22.3"
crossbeam-queue = "0.3.2"
decorum = "0.3.1"
glfw = { version = "0.42.0", optional = true }
glyph_brush = "0.7.3"
hv = { path = "../hv", features = ["parry3d", "vendored"], package = "heavy" }
lazy_static = "1.4.0"
luminance = "0.45.0"
luminance-glfw = { version = "0.17.0", optional = true }
luminance-glyph = { version = "0.3.0", git = "https://github.com/sdleffler/luminance-glyph" }
lyon = "0.17.10"
parry3d = "0.7.1"
serde = "1.0.130"
shrev = "1.1.1"
slab = "0.4.5"
soft-edge = { version = "0.2.3", path = "../../soft-edge" }
spin = "0.9.2"
static_assertions = "1.1.0"
thunderdome = "0.5.0"
tracing = "0.1.29"
