[package]
name = "hv-alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
hv-sync = { version = "0.1.0", path = "../hv-sync" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
static_assertions = "1.1.0"

[features]
