[package]
name = "hv-filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
directories = "4.0.1"
hv-alchemy = { path = "../hv-alchemy" }
hv-lua = { path = "../hv-lua" }
hv-vfs = { path = "../hv-vfs" }
log = "0.4.14"
