[package]
name = "hv-lua-derive"
version = "0.6.0"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>", "Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2018"
description = "Procedural macros for the hv-lua crate."
keywords = ["lua", "hv-lua", "hv"]
license = "MIT"

[lib]
proc-macro = true

[features]
hv-reexport = []
macros = ["proc-macro-error", "itertools", "regex", "once_cell"]

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = { version = "1.0", optional = true }
syn = { version = "1.0", features = ["full"] }
itertools = { version = "0.10", optional = true }
regex = { version = "1.4", optional = true }
once_cell = { version = "1.5", optional = true }
