[package]
name = "heavy"
version = "0.2.0"
edition = "2021"

[features]
lua54 = ["lua/lua54"]
lua53 = ["lua/lua53"]
lua52 = ["lua/lua52"]
lua51 = ["lua/lua51"]
luajit = ["lua/luajit"]
vendored = ["lua/vendored"]
module = ["lua/module"]

glfw = ["input/glfw"]
parry3d = ["lua/parry3d"]

[dependencies]
alchemy = { version = "0.1.0", path = "crates/hv-alchemy", package = "hv-alchemy" }
anyhow = "1.0.44"
ecs = { version = "0.1.0", path = "crates/hv-ecs", package = "hv-ecs" }
ecs-derive = { version = "0.7.0", path = "crates/hv-ecs-derive", package = "hv-ecs-derive" }
elastic = { version = "0.3.0", path = "crates/hv-elastic", package = "hv-elastic", features = ["hv-ecs"] }
fs = { version = "0.1.0", path = "crates/hv-filesystem", package = "hv-filesystem" }
guarded_borrow = { version = "0.1.0", path = "crates/hv-guarded-borrow", package = "hv-guarded-borrow", features = ["std", "hv-ecs"] }
lua = { version = "0.6.6", path = "crates/hv-lua", package = "hv-lua", features = ["hv-reexport", "nalgebra", "send", "macros"] }
math = { version = "0.1.0", path = "crates/hv-math", package = "hv-math" }
petgraph = "0.6.0"
sync = { version = "0.1.0", path = "crates/hv-sync", package = "hv-sync" }
thiserror = "1.0.30"
input = { version = "0.1.0", path = "crates/hv-input", package = "hv-input" }
timer = { version = "0.1.0", path = "crates/hv-timer", package = "hv-timer" }
stampede = { version = "0.1.0", path = "crates/hv-stampede", package = "hv-stampede" }
resources = { version = "1.1.0", path = "crates/hv-resources", package = "hv-resources" }
yaks = { version = "0.1.0", path = "crates/hv-yaks", package = "hv-yaks" }

[workspace]
members = [
    "hv/crates/hv-alchemy",
    "hv/crates/hv-atom",
    "hv/crates/hv-boxed",
    "hv/crates/hv-cell",
    "hv/crates/hv-ecs-derive",
    "hv/crates/hv-elastic",
    "hv/crates/hv-filesystem",
    "hv/crates/hv-guarded-borrow",
    "hv/crates/hv-input",
    "hv/crates/hv-lease-tracker",
    "hv/crates/hv-looprider",
    "hv/crates/hv-lua",
    "hv/crates/hv-lua/hv-lua-derive",
    "hv/crates/hv-lua/examples/module",
    "hv/crates/hv-lua/tests/module",
    "hv/crates/hv-math",
    "hv/crates/hv-resources",
    "hv/crates/hv-stampede",
    "hv/crates/hv-sync",
    "hv/crates/hv-timer",
    "hv/crates/hv-vfs",
    "hv/crates/hv-yaks",
    "hv",
]
