[package]
name = "heavy"
version = "0.2.0"
edition = "2021"

[features]
lua54 = ["lua/lua54"]
lua53 = ["lua/lua53"]
lua52 = ["lua/lua52"]
lua51 = ["lua/lua51"]
luajit = ["lua/luajit"]
vendored = ["lua/vendored"]
module = ["lua/module"]

glfw = ["input/glfw"]
parry3d = ["lua/parry3d"]

[dependencies]
alchemy = { version = "0.1.0", path = "crates/hv-alchemy", package = "hv-alchemy" }
anyhow = "1.0.48"
console = { version = "0.1.0", path = "crates/hv-console", package = "hv-console" }
ecs = { version = "0.6.5", path = "../hv-ecs", package = "hecs", features = ["serde", "column-serialize", "row-serialize"] }
ecs-derive = { version = "0.7.0", path = "crates/hv-ecs-derive", package = "hv-ecs-derive" }
elastic = { version = "0.3.0", path = "crates/hv-elastic", package = "hv-elastic", features = ["hv-ecs"] }
fs = { version = "0.1.0", path = "crates/hv-filesystem", package = "hv-filesystem" }
guarded_borrow = { version = "0.1.0", path = "crates/hv-guarded-borrow", package = "hv-guarded-borrow", features = ["std", "hv-ecs"] }
gui = { version = "0.1.0", path = "crates/hv-gui", package = "hv-gui" }
lua = { version = "0.6.6", path = "../hv-lua", package = "hv-lua", features = ["hv-reexport", "nalgebra", "send", "macros"] }
math = { version = "0.1.0", path = "crates/hv-math", package = "hv-math" }
petgraph = "0.6.0"
sync = { version = "0.1.0", path = "crates/hv-sync", package = "hv-sync" }
thiserror = "1.0.30"
input = { version = "0.1.0", path = "crates/hv-input", package = "hv-input" }
timer = { version = "0.1.0", path = "crates/hv-timer", package = "hv-timer" }
stampede = { version = "0.1.0", path = "crates/hv-stampede", package = "hv-stampede" }
resources = { version = "1.1.0", path = "crates/hv-resources", package = "hv-resources" }
script = { version = "0.1.0", path = "crates/hv-script", package = "hv-script" }
yaks = { version = "0.1.0", path = "crates/hv-yaks", package = "hv-yaks" }

[workspace]
members = [
    "crates/hv-alchemy",
    "crates/hv-atom",
    "crates/hv-boxed",
    "crates/hv-cell",
    "crates/hv-ecs-derive",
    "crates/hv-elastic",
    "crates/hv-filesystem",
    "crates/hv-guarded-borrow",
    "crates/hv-gui",
    "crates/hv-input",
    "crates/hv-lease-tracker",
    "crates/hv-looprider",
    "crates/hv-math",
    "crates/hv-resources",
    "crates/hv-stampede",
    "crates/hv-sync",
    "crates/hv-timer",
    "crates/hv-vfs",
    "crates/hv-yaks",
    ".",
]

[patch.crates-io]
luminance = { path = "../../luminance-rs/luminance" }
luminance-gl = { path = "../../luminance-rs/luminance-gl" }
luminance-front = { path = "../../luminance-rs/luminance-front" }

[patch."https://github.com/sdleffler/luminance-glyph"]
luminance-glyph = { path = "../../luminance-glyph" }

[profile.dev]
# Rust iterators are absolutely horrific without any optimizations, and we like them a lot.
opt-level = 1
