[package]
name = "heavy"
version = "0.2.0"
edition = "2021"

[features]
lua54 = ["lua/lua54"]
lua53 = ["lua/lua53"]
lua52 = ["lua/lua52"]
lua51 = ["lua/lua51"]
luajit = ["lua/luajit"]
vendored = ["lua/vendored"]
module = ["lua/module"]

glfw = ["input/glfw"]
parry3d = ["lua/parry3d"]

[dependencies]
alchemy = { version = "0.1.0", path = "crates/hv-alchemy", package = "hv-alchemy" }
anyhow = "1.0.49"
atom = { version = "0.1.0", path = "crates/hv-atom", package = "hv-atom" }
cell = { version = "0.1.0", path = "crates/hv-cell", package = "hv-cell" }
console = { version = "0.1.0", path = "crates/hv-console", package = "hv-console" }
ecs = { version = "0.7.1", path = "../hv-ecs", package = "hecs", features = ["serde", "column-serialize", "row-serialize"] }
ecs-derive = { version = "0.7.0", path = "crates/hv-ecs-derive", package = "hv-ecs-derive" }
elastic = { version = "0.4.0", path = "crates/hv-elastic", package = "hv-elastic", features = ["hv-ecs"] }
fs = { version = "0.1.0", path = "crates/hv-filesystem", package = "hv-filesystem" }
guarded_borrow = { version = "0.1.0", path = "crates/hv-guarded-borrow", package = "hv-guarded-borrow", features = ["std", "hv-ecs"] }
gui = { version = "0.1.0", path = "crates/hv-gui", package = "hv-gui" }
lua = { version = "0.6.6", path = "../hv-lua", package = "hv-lua", features = ["hv-reexport", "nalgebra", "macros"] }
math = { version = "0.1.0", path = "crates/hv-math", package = "hv-math" }
petgraph = "0.6.0"
thiserror = "1.0.30"
input = { version = "0.1.0", path = "crates/hv-input", package = "hv-input" }
timer = { version = "0.1.0", path = "crates/hv-timer", package = "hv-timer" }
stampede = { version = "0.2.1", path = "crates/hv-stampede", package = "hv-stampede" }
resources = { version = "1.1.0", path = "crates/hv-resources", package = "hv-resources" }
script = { version = "0.1.0", path = "crates/hv-script", package = "hv-script" }
yaks = { version = "0.1.0", path = "crates/hv-yaks", package = "hv-yaks" }
