[package]
name = "hv-ecs"
description = "A wrapper around the `hecs` crate performing reexporting/version patching for Heavy"
authors = ["Shea 'Decibel' Leffler"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sdleffler/hv-dev"
documentation = "https://docs.rs/hv-ecs"

[features]
default = ["std"]
std = []
# Enables the serialize::column module
column-serialize = ["serde"]
# Enables the serialize::row module
row-serialize = ["serde"]

[dependencies]
# hecs = { version = "0.6.5", path = "../../../hecs" }
# hecs = { version = "0.6.5", git = "https://github.com/sdleffler/hecs", branch = "type-info-expose"
# }

# Dependencies needed for embedding hecs as a temporary solution to lack of dynamic query support.
hashbrown = { version = "0.11.0", default-features = false, features = ["ahash", "inline-more"] }
lazy_static = { version = "1.4.0", optional = true, features = ["spin_no_std"] }
serde = { version = "1.0.117", default-features = false, optional = true }

[dev-dependencies]
bencher = "0.1.5"
rand = "0.8.3"
trybuild = "1.0.23"
serde = { version = "1.0.117", features = ["derive"] }
serde_test = "1.0.117"
