[package]
name = "hv-elastic"
description = "Safe abstractions for lengthening lifetimes and `'static` \"loaning\" of non-`'static` types"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>"]
license = "MIT OR Apache 2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/sdleffler/hv-dev"
documentation = "https://docs.rs/hv-elastic"
keywords = ["lifetime", "reference", "sync", "arc", "no-std"]
categories = ["no-std", "concurrency", "data-structures"]

[features]

[dependencies]
hv-cell = { path = "../hv-cell" }
hv-guarded-borrow = { path = "../hv-guarded-borrow" }
hecs = { version = "0.6.5", path = "../../../hecs", optional = true }
static_assertions = "1.1.0"
