[package]
name = "hv-filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
directories = "4.0.1"
hv-alchemy = { version = "0.1.0", path = "../hv-alchemy" }
hv-lua = { version = "0.6.6", path = "../../../hv-lua" }
hv-vfs = { version = "0.1.0", path = "../hv-vfs" }
log = "0.4.14"
static_assertions = "1.1.0"
