[package]
name = "hv-lease-tracker"
description = "no-std compatible tracking of borrow origins, for providing better diagnostics when implementing interior mutability primitives"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/sdleffler/hv-dev"
documentation = "https://docs.rs/hv-lease-tracker"
keywords = ["borrow", "diagnostic", "panic"]
categories = ["no-std", "concurrency", "data-structures"]

[dependencies]
slab = "0.4.5"
spin = "0.9.2"
