[package]
name = "hv-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
hv-alchemy = { path = "../hv-alchemy" }
hv-lua = { path = "../hv-lua" }
thiserror = "1.0.30"
zip = "0.5.13"
