[package]
name = "hv-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
hv-alchemy = { version = "0.1.0", path = "../hv-alchemy" }
hv-lua = { version = "0.6.6", path = "../../../hv-lua" }
thiserror = "1.0.30"
zip = "0.5.13"
